--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/accets/reset.css" />
-    <link rel="stylesheet" href="/accets/styles.css" />
+    <link rel="stylesheet" href="./accets/reset.css" />
+    <link rel="stylesheet" href="./accets/styles.css" />
   </head>
   <body>
     <nav class="dashboard">
